# CheapYellowDisplay

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
components/CYD-display/: CMakeLists.txt  CYD_display.c  idf_component.yml
components/CYD-display/include/: CYD_display.h
components/CYD_SDCard/: CMakeLists.txt  CYD_SDCard.c
components/CYD_SDCard/include/: CYD_SDCard.h
components/CYD_UI/: CMakeLists.txt  CYD_UI.c  CYD_home_screen.c  CYD_search_screen.c  CYD_setting_screen.c  boot_screen.c  idf_component.yml
components/CYD_UI/images/: CMakeLists.txt  boot_screen_img.c  home_icon.c  icon_bell.c  icon_radar.c  naked_home_menu.c  search_icon.c  setting_icon.c
components/CYD_UI/include/: CYD_UI.h  CYD_home_screen.h  CYD_search_screen.h  CYD_setting_screen.h
components/CheapYellowDisplay/: CMakeLists.txt  CheapYellowDisplay.c
components/CheapYellowDisplay/include/: CheapYellowDisplay.h
components/UI/: CMakeLists.txt  UI_manager.c
components/UI/include/: UI_manager.h
components/person_handling/: CMakeLists.txt  person_handling.c
components/person_handling/include/: person_handling.h
components/person_handling/test/: CMakeLists.txt  test_person_handling.c
main/: CMakeLists.txt  main.c  menu.c  radar.c  welcome.c
test/: sdkconfig  sdkconfig.old
test/main/: example_unit_test_test.c
